dod-1016: createUser lambda is created and dods-model is updated/published
